--- a/index.html
+++ b/index.html
@@ -321,14 +321,14 @@ document.getElementById("logo-div").style.backgroundImage = "url(http://images.f
       <div class="fw-paragraph"> 
         <h2><a name="99179920"></a><!-- ParagraphTitleStart -->Welcome to the legend of the crystals  <!-- ParagraphTitleEnd --></h2>
         <div class="fw-text"> <!-- ParagraphBodyStart --><p><img src="https://web.archive.org/web/20071212021014im_/http://counters.freewebs.com/Members/Counters/counter.jsp?userid=22686041&amp;name=there coming soon">&nbsp;</p>
-<p>Welcome to the legend of the crystals. for ages the magi have powered the great crystals of the seasons that kept the seasons from being wildy out of control.&nbsp;but now someone has stolen the crystals and the seasons have been thrown into chaos. now the great magi's spirits need the help of&nbsp;magi archers theives warriors assassins and even animals!.&nbsp;this game is a easy one create your players name and then what it is a mage a warrior etc. to play use the guest book shout box or the forums on my site.</p>
+<p>Welcome to the legend of the crystals.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p><!-- ParagraphBodyEnd --> </div>
       </div>
       <!-- ParagraphEnd 99179920 --><!-- ParagraphStart 106354743 --> 
       <div class="fw-paragraph"> 
         <h2><a name="106354743"></a><!-- ParagraphTitleStart -->forums? we have forums... <!-- ParagraphTitleEnd --></h2>
-        <div class="fw-text"> <!-- ParagraphBodyStart --><p>yes we have forums...but now we have bigger forums! on invision power boards legends of the crystals now has a forum! here is the link:(still working on domain name/better name) <a href="https://web.archive.org/web/20071212021014/http://z11.invisionfree.com/lotc_forums/index.php?&amp;CODE=00">http://z11.invisionfree.com/lotc_forums/index.php?&amp;CODE=00</a></p><!-- ParagraphBodyEnd --> </div>
+        <div class="fw-text"> <!-- ParagraphBodyStart --><p>ugg&amp;CODE=00</a></p><!-- ParagraphBodyEnd --> </div>
       </div>
       <!-- ParagraphEnd 106354743 --><!-- ParagraphStart 106419969 --> 
       <div class="fw-paragraph"> 
